# term2

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: Build.yml
lab2compress/: Source.c
lab2decompress/: Header.h  Source.c  main.c
laba4akinator/: CMakeLists.txt
laba4akinator/data/: CMakeLists.txt  Source.c
laba4akinator/lib/: CMakeLists.txt  treeAPI.c
labs/check/: main.c
labs/lab1pars/: Header.h  Source.c  main.c
labs/lab2compress/: Header.h  Source.c  main.c
labs/lab2decompress/: Header.h  Source.c  main.c
labs/lab3/: Header.h  Source.c  main.c
labs/laba4akinator/: Header.h  Source.c  main.c  treeAPI.c  treeAPI.h
labs/laba5hash/: header.h  main.c  source.c
